<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <Button
            android:id="@+id/sobre_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sobre"
            tools:layout_editor_absoluteX="204dp"
            tools:layout_editor_absoluteY="148dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/formacao_button"/>

    <Button
            android:id="@+id/formacao_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/formacao"
            tools:layout_editor_absoluteX="76dp"
            tools:layout_editor_absoluteY="284dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sobre_button"
            app:layout_constraintBottom_toTopOf="@id/experiencia_button"/>

    <Button
            android:id="@+id/experiencia_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/experiencia"
            tools:layout_editor_absoluteX="160dp"
            tools:layout_editor_absoluteY="441dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/formacao_button"
            app:layout_constraintBottom_toTopOf="@id/objetivo_button"/>

    <Button
            android:id="@+id/objetivo_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/objetivo"
            tools:layout_editor_absoluteX="96dp"
            tools:layout_editor_absoluteY="538dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/experiencia_button"
            app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>