<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SobreActivity">

    <TextView
            android:id="@+id/titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sobre"
            tools:layout_editor_absoluteX="149dp"
            tools:layout_editor_absoluteY="162dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/nome"
            android:textSize="32sp"
            android:textStyle="bold"/>

    <TextView
            android:id="@+id/nome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nome"
            tools:layout_editor_absoluteX="175dp"
            tools:layout_editor_absoluteY="323dp"
            app:layout_constraintTop_toBottomOf="@id/titulo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/idade"
            android:layout_marginTop="40dp"/>

    <TextView
            android:id="@+id/idade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/idade"
            tools:layout_editor_absoluteX="105dp"
            tools:layout_editor_absoluteY="399dp"
            app:layout_constraintTop_toBottomOf="@id/nome"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>