<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ExperienciaActivity">

    <TextView
            android:id="@+id/titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/experiencia"
            tools:layout_editor_absoluteX="149dp"
            tools:layout_editor_absoluteY="162dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/primeria_formacao"
            android:textSize="32sp"
            android:textStyle="bold"/>

    <TextView
            android:id="@+id/primeria_formacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/primeira_experiencia"
            tools:layout_editor_absoluteX="175dp"
            tools:layout_editor_absoluteY="323dp"
            app:layout_constraintTop_toBottomOf="@id/titulo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center"/>

    <TextView
            android:id="@+id/segunda_formacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/segunda_experiencia"
            tools:layout_editor_absoluteX="175dp"
            tools:layout_editor_absoluteY="323dp"
            app:layout_constraintTop_toBottomOf="@id/primeria_formacao"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center"/>
</androidx.constraintlayout.widget.ConstraintLayout>